# crew-ai

./: .gitignore
ai_latest_development/: pyproject.toml  report.md
ai_latest_development/src/ai_latest_development/: crew.py  main.py
ai_news/: pyproject.toml
ai_news/src/ai_news/: crew.py  main.py
ai_news/src/ai_news/config/: tasks.yaml
meeting_minutes/: README.md  pyproject.toml  requirements.txt
meeting_minutes/meeting_minutes/: action_items.txt  sentiment.txt  summary.txt
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/config/: agents.yaml  tasks.yaml
news/: date_news_article.md
poem_flow/: README.md  pyproject.toml
poem_flow/output/: post.md
poem_flow/src/poem_flow/: main.py
poem_flow/src/poem_flow/crews/content_crew/: content_crew.py
