[project]
name = "meeting_minutes"
version = "0.1.0"
description = "meeting-minutes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
kickoff = "meeting_minutes.main:kickoff"
run_crew = "meeting_minutes.main:kickoff"
plot = "meeting_minutes.main:plot"
run_with_trigger = "meeting_minutes.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
